@startuml
'https://plantuml.com/class-diagram


Package Property <<Rectangle>>{

class PropertyToBuy
class PropertyToSell

class PriceRange{
int lower
int upper
}

class Address {
String address
}
class House {
HouseType houseType
Location location
}

enum HouseType {
UNSPECIFIED,
APARTMENT,
BUNGALOW,
CONDOMINIUM,
COLONIA,
HDB_FLAT,
SEMIDETACHED,
MANSION
}


}

PropertyToBuy *--> House
PropertyToBuy *--> PriceRange

PropertyToSell *--> House
PropertyToSell *--> PriceRange
PropertyToSell *--> Address


@enduml
